projects/amiya.akn/src/apps/*sso/pocket-id/security/network-policy.allow-pocket-id-from-envoy-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Envoy Gateway to route traffic to Pocket ID application.
  name: allow-pocket-id-from-envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
