projects/amiya.akn/src/apps/*sso/pocket-id/security/network-policy.allow-pocket-id-to-internet.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Pocket ID to send authentication codes and notifications
      through Mailjet SMTP service on port 587 (SMTP with STARTTLS).
  name: allow-pocket-id-to-internet
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-id
  egress:
    - toFQDNs:
        - matchName: in-v3.mailjet.com
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
