projects/amiya.akn/src/apps/*sso/pocket-id/security/network-policy.allow-postgres-to-kubernetes-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Pocket ID PostgreSQL pods to access the Kubernetes API server.
  name: allow-postgres-to-kubernetes-api
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: pocket-id
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP

    # Allow access to API server via host network (common in Talos)
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
